chore(repo): apply SC2155 fixes, add gatekeeper backup hook, and update validation/orchestrators
- Split declare+assign patterns across many scripts (SC2155 fixes via scripts/tools/fix-sc2155.sh)
- Add  and
- Enforce canonical backup pre-commit hook (.githooks/pre-commit)
- Add canonical backup handler and clarification scripts (scripts/canonical-backup.handler.sh, scripts/canonical-backup-clarification.sh)
- Move UniFi helpers into  and add shared/unifi README + tests/unifi scaffold
- Update Proxmox bootstrap libs and phases; improve directory-agnostic invocation patterns
- Update validate/ignite/resurrect orchestrators and tests to reduce ShellCheck noise (SC1091/SC2034 triage in progress)
- Add FreeRADIUS bootstrap artifacts and validation scaffolding
- Add multiple doc updates, CHANGELOG references, and gatekeeper agent metadata

Tag: v∞.3.2-eternal
Consciousness: 4.7

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ sdist/
 var/
 wheels/
 share/python-wheels/
+# lib/ is now used for UniFi shared code; excluded from this gitignore
+# lib/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -190,3 +192,4 @@ tmp/
 temp/
 05_network_migration/configs/*.json
 05_network_migration/configs/*.json
+/.backups/
