--- a/01_bootstrap/proxmox/proxmox-answer.cfg
+++ b/01_bootstrap/proxmox/proxmox-answer.cfg
@@ -1,5 +1,4 @@
 # Proxmox VE 8.2 Automated Installer Configuration (preseed)
-#
 # This file automates the Proxmox installer to reduce manual steps.
 # Usage: Boot Proxmox ISO, select "Advanced Options" → "Auto-Install"
 #        and provide this file via USB/PXE
@@ -41,10 +40,22 @@ d-i partman-auto/method string lvm
 d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-lvm/confirm boolean true
 
-# Root password (Bauer: will be replaced by SSH key auth in proxmox-ignite.sh)
-# SECURITY: This is temporary; proxmox-ignite.sh disables password auth
-d-i passwd/root-password password ChangeMe123!
-d-i passwd/root-password-again password ChangeMe123!
+# Root password (replaced by SSH key injection below).
+# SECURITY: Do NOT store plaintext passwords in preseeds. Options:
+#  - Preferred: leave unset and inject an operator SSH key via late_command
+#  - Alternative: set a crypted password via `d-i passwd/root-password-crypted password <CRYPTED_HASH>`
+
+# Inject an operator SSH public key and disable password auth immediately
+# Replace <PUBLIC_SSH_KEY> with your operator key (single-line) or point
+# late_command at a trusted location to fetch the key.
+d-i preseed/late_command string \
+	in-target mkdir -p /root/.ssh; \
+	in-target sh -c 'printf "%s\n" "<PUBLIC_SSH_KEY>" >> /root/.ssh/authorized_keys'; \
+	in-target chmod 700 /root/.ssh; \
+	in-target chmod 600 /root/.ssh/authorized_keys; \
+	in-target sed -i "s/^#\?PermitRootLogin.*/PermitRootLogin prohibit-password/" /etc/ssh/sshd_config || true; \
+	in-target sed -i "s/^#\?PasswordAuthentication.*/PasswordAuthentication no/" /etc/ssh/sshd_config || true; \
+	in-target systemctl restart ssh || true
 
 # User creation (optional, not required for Proxmox)
 d-i passwd/make-user boolean false
